# c-blackjack

./: .gitignore  CMakeLists.txt  README.md  cards.c  cards.h  game.c  game.h  main.c  renderer.c  renderer.h
